--- a/.final_builds/jobs/consul-template/index.yml
+++ b/.final_builds/jobs/consul-template/index.yml
@@ -4,4 +4,8 @@ builds:
     version: 259f87ed6a3dd3359dfbb7bf6f922a990323c554
     sha1: ab931bdeea1d9b6cac83f878f0fc8c49ca9c51a7
     blobstore_id: a571388e-e377-49df-8e44-2cc4bc70db51
+  fe15ab1ba3c9d4b36422d0d3bc8e103992ffa0b2:
+    version: fe15ab1ba3c9d4b36422d0d3bc8e103992ffa0b2
+    sha1: 9ecc7c55c43ad57e9204c09d63c7a648e34f659e
+    blobstore_id: 61478689-9a72-4318-ab77-887ddaf6401f
 format-version: '2'
