--- a/releases/iot-haproxy/index.yml
+++ b/releases/iot-haproxy/index.yml
@@ -6,4 +6,6 @@ builds:
     version: '2'
   a6682fb9-ecde-4f87-ad25-da077d30a208:
     version: '3'
+  dd973f2b-c619-4e82-a1ec-c3da74e0a224:
+    version: '4'
 format-version: '2'
